--- a/shippable.yml
+++ b/shippable.yml
@@ -14,3 +14,14 @@ build:
 
   post_ci:
     - echo "true"
+
+integrations:
+  notifications:
+    - integrationName: "Test Webhook"
+      type: webhook
+      payload:
+        - versionName: $BRANCH_NAME:$BUILD_ID
+      on_success: always
+      on_failure: always
+      on_pull_request: never
+      on_start: never
