--- a/shippable.yml
+++ b/shippable.yml
@@ -20,7 +20,7 @@ integrations:
     - integrationName: "Test Webhook"
       type: webhook
       payload:
-        - "versionName=$BRANCH_NAME:$BUILD_ID"
+        - versionName=test
       on_success: always
       on_failure: always
       on_pull_request: never
