Comment out pre_ci

--- a/shippable.yml
+++ b/shippable.yml
@@ -5,8 +5,8 @@ compiler:
   - clang
 
 build:
-  pre_ci:
-    - echo 'true'
+#  pre_ci:
+#    - echo 'true'
 
   ci:
     - ./configure && make && make install
