Comment out post_ci

--- a/shippable.yml
+++ b/shippable.yml
@@ -12,8 +12,8 @@ build:
     - ./configure && make && make install
     - ./hello
 
-  post_ci:
-    - echo "true"
+#  post_ci:
+#    - echo "true"
 
 #integrations:
 #  notifications:
